[build-system]
requires = ["setuptools >= 61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "galdens"
version = "2024.10.14"
requires-python = ">= 3.10"
authors = [{name = "Luca Di Mascolo", email = "lucadimascolo@gmail.com"}]
description = "A simple tool for generating galaxy density maps from a source list."
readme = "README.md"
license = {file = "LICENSE"}
classifiers = ["License :: OSI Approved :: MIT License",
               "Programming Language :: Python :: 3.10"]
dependencies = ["numpy<2","scipy","matplotlib","astropy==5.3.4","aplpy"]

[project.urls]
Repository = "https://github.com/lucadimascolo/galdens.git"
Issues = "https://github.com/lucadimascolo/galdens/issues"
Changelog = "https://github.com/lucadimascolo/galdens/blob/master/CHANGELOG.md"

